// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Layout drift detection (snapshots) > Layout A full row snapshot 1`] = `
{
  "background": [
    {
      "color": "#f1f5f9",
      "heightMm": 50.8,
      "yMm": 50.8,
    },
  ],
  "instructions": [
    {
      "align": "center",
      "decorator": "dividerLine",
      "decoratorColor": "#000000",
      "decoratorGapMm": 1,
      "decoratorThicknessMm": 0.3,
      "fontSizePt": 6.2,
      "fontWeight": "bold",
      "id": "additionalText",
      "text": "DC-01",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 2,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 8,
      "fontWeight": "bold",
      "id": "aSide",
      "text": "Switch-A",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 5.800000000000001,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 6,
      "fontWeight": "normal",
      "id": "portA",
      "text": "Port 1/0/1",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 9.8,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 6.5,
      "fontWeight": "normal",
      "id": "arrow",
      "text": "<->",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 13.100000000000001,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 8,
      "fontWeight": "bold",
      "id": "zSide",
      "text": "Switch-B",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 16.6,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 6,
      "fontWeight": "normal",
      "id": "portB",
      "text": "Port 1/0/2",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 20.6,
    },
    {
      "color": "#94a3b8",
      "style": "dashed",
      "type": "divider",
      "widthMm": 38.1,
      "yMm": 25.4,
    },
    {
      "align": "center",
      "decorator": "dividerLine",
      "decoratorColor": "#000000",
      "decoratorGapMm": 1,
      "decoratorThicknessMm": 0.3,
      "fontSizePt": 6.2,
      "fontWeight": "bold",
      "id": "additionalText",
      "text": "DC-01",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 27.4,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 8,
      "fontWeight": "bold",
      "id": "aSide",
      "text": "Switch-A",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 31.2,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 6,
      "fontWeight": "normal",
      "id": "portA",
      "text": "Port 1/0/1",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 35.2,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 6.5,
      "fontWeight": "normal",
      "id": "arrow",
      "text": "<->",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 38.5,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 8,
      "fontWeight": "bold",
      "id": "zSide",
      "text": "Switch-B",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 42,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 6,
      "fontWeight": "normal",
      "id": "portB",
      "text": "Port 1/0/2",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 46,
    },
  ],
  "page": {
    "heightMm": 101.6,
    "widthMm": 38.1,
  },
}
`;

exports[`Layout drift detection (snapshots) > Layout A minimal row snapshot 1`] = `
{
  "background": [
    {
      "color": "#f1f5f9",
      "heightMm": 50.8,
      "yMm": 50.8,
    },
  ],
  "instructions": [
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 8,
      "fontWeight": "bold",
      "id": "aSide",
      "text": "A",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 2,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 6.5,
      "fontWeight": "normal",
      "id": "arrow",
      "text": "<->",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 6,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 8,
      "fontWeight": "bold",
      "id": "zSide",
      "text": "B",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 9.5,
    },
    {
      "color": "#94a3b8",
      "style": "dashed",
      "type": "divider",
      "widthMm": 38.1,
      "yMm": 25.4,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 8,
      "fontWeight": "bold",
      "id": "aSide",
      "text": "A",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 27.4,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 6.5,
      "fontWeight": "normal",
      "id": "arrow",
      "text": "<->",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 31.4,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 8,
      "fontWeight": "bold",
      "id": "zSide",
      "text": "B",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 34.9,
    },
  ],
  "page": {
    "heightMm": 101.6,
    "widthMm": 38.1,
  },
}
`;

exports[`Layout drift detection (snapshots) > Layout A-QR full row snapshot 1`] = `
{
  "background": [
    {
      "color": "#f1f5f9",
      "heightMm": 50.8,
      "yMm": 50.8,
    },
  ],
  "instructions": [
    {
      "align": "center",
      "decorator": "dividerLine",
      "decoratorColor": "#000000",
      "decoratorGapMm": 1,
      "decoratorThicknessMm": 0.3,
      "fontSizePt": 6.2,
      "fontWeight": "bold",
      "id": "additionalText",
      "text": "DC-01",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 2,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 8,
      "fontWeight": "bold",
      "id": "aSide",
      "text": "Switch-A",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 5.800000000000001,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 6,
      "fontWeight": "normal",
      "id": "portA",
      "text": "Port 1/0/1",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 9.8,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 6.5,
      "fontWeight": "normal",
      "id": "arrow",
      "text": "<->",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 13.100000000000001,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 8,
      "fontWeight": "bold",
      "id": "zSide",
      "text": "Switch-B",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 16.6,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 6,
      "fontWeight": "normal",
      "id": "portB",
      "text": "Port 1/0/2",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 20.6,
    },
    {
      "color": "#94a3b8",
      "style": "dashed",
      "type": "divider",
      "widthMm": 38.1,
      "yMm": 25.4,
    },
    {
      "payload": "DC-01
Device A: Switch-A
Port A: 1/0/1
Device B: Switch-B
Port B: 1/0/2",
      "sizeMm": 21,
      "type": "qr",
      "xMm": 8.55,
      "yMm": 27.599999999999998,
    },
  ],
  "page": {
    "heightMm": 101.6,
    "widthMm": 38.1,
  },
}
`;

exports[`Layout drift detection (snapshots) > Layout A-QR minimal row snapshot 1`] = `
{
  "background": [
    {
      "color": "#f1f5f9",
      "heightMm": 50.8,
      "yMm": 50.8,
    },
  ],
  "instructions": [
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 8,
      "fontWeight": "bold",
      "id": "aSide",
      "text": "A",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 2,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 6.5,
      "fontWeight": "normal",
      "id": "arrow",
      "text": "<->",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 6,
    },
    {
      "align": "center",
      "decorator": null,
      "decoratorColor": null,
      "decoratorGapMm": null,
      "decoratorThicknessMm": null,
      "fontSizePt": 8,
      "fontWeight": "bold",
      "id": "zSide",
      "text": "B",
      "type": "text",
      "widthMm": 35.052,
      "xMm": 1.524000000000001,
      "yMm": 9.5,
    },
    {
      "color": "#94a3b8",
      "style": "dashed",
      "type": "divider",
      "widthMm": 38.1,
      "yMm": 25.4,
    },
    {
      "payload": "Device A: A
Device B: B",
      "sizeMm": 21,
      "type": "qr",
      "xMm": 8.55,
      "yMm": 27.599999999999998,
    },
  ],
  "page": {
    "heightMm": 101.6,
    "widthMm": 38.1,
  },
}
`;

exports[`Layout drift detection (snapshots) > Layout B full row snapshot 1`] = `
{
  "background": [],
  "instructions": [
    {
      "align": "center",
      "fontSizePt": 7.6,
      "fontWeight": "bold",
      "id": "aSide",
      "text": "Switch-A",
      "type": "text",
      "widthMm": 32.766,
      "xMm": 2.6670000000000016,
      "yMm": 6.299999999999999,
    },
    {
      "align": "center",
      "fontSizePt": 6.6,
      "fontWeight": "normal",
      "id": "arrow",
      "text": "<->",
      "type": "text",
      "widthMm": 32.766,
      "xMm": 2.6670000000000016,
      "yMm": 10.5,
    },
    {
      "align": "center",
      "fontSizePt": 7.6,
      "fontWeight": "bold",
      "id": "zSide",
      "text": "Switch-B",
      "type": "text",
      "widthMm": 32.766,
      "xMm": 2.6670000000000016,
      "yMm": 14.799999999999999,
    },
    {
      "align": "center",
      "fontSizePt": 7.6,
      "fontWeight": "bold",
      "id": "aSide",
      "text": "Switch-A",
      "type": "text",
      "widthMm": 32.766,
      "xMm": 2.6670000000000016,
      "yMm": 31.699999999999996,
    },
    {
      "align": "center",
      "fontSizePt": 6.6,
      "fontWeight": "normal",
      "id": "arrow",
      "text": "<->",
      "type": "text",
      "widthMm": 32.766,
      "xMm": 2.6670000000000016,
      "yMm": 35.9,
    },
    {
      "align": "center",
      "fontSizePt": 7.6,
      "fontWeight": "bold",
      "id": "zSide",
      "text": "Switch-B",
      "type": "text",
      "widthMm": 32.766,
      "xMm": 2.6670000000000016,
      "yMm": 40.199999999999996,
    },
  ],
  "page": {
    "heightMm": 101.6,
    "widthMm": 38.1,
  },
}
`;

exports[`Layout drift detection (snapshots) > Layout C full row snapshot 1`] = `
{
  "background": [],
  "instructions": [
    {
      "align": "center",
      "fontSizePt": 5.8,
      "fontWeight": "bold",
      "id": "lineName_r0c0",
      "text": "Line-1",
      "type": "text",
      "widthMm": 16,
      "xMm": 1.5250000000000004,
      "yMm": 6.199999999999999,
    },
    {
      "align": "center",
      "fontSizePt": 5.4,
      "fontWeight": "normal",
      "id": "aSide_r0c0",
      "text": "Switch-A",
      "type": "text",
      "widthMm": 16,
      "xMm": 1.5250000000000004,
      "yMm": 10.299999999999999,
    },
    {
      "align": "center",
      "fontSizePt": 5.4,
      "fontWeight": "normal",
      "id": "zSide_r0c0",
      "text": "Switch-B",
      "type": "text",
      "widthMm": 16,
      "xMm": 1.5250000000000004,
      "yMm": 14.399999999999999,
    },
    {
      "align": "center",
      "fontSizePt": 5.8,
      "fontWeight": "bold",
      "id": "lineName_r0c1",
      "text": "Line-1",
      "type": "text",
      "widthMm": 16,
      "xMm": 20.575000000000003,
      "yMm": 6.199999999999999,
    },
    {
      "align": "center",
      "fontSizePt": 5.4,
      "fontWeight": "normal",
      "id": "aSide_r0c1",
      "text": "Switch-A",
      "type": "text",
      "widthMm": 16,
      "xMm": 20.575000000000003,
      "yMm": 10.299999999999999,
    },
    {
      "align": "center",
      "fontSizePt": 5.4,
      "fontWeight": "normal",
      "id": "zSide_r0c1",
      "text": "Switch-B",
      "type": "text",
      "widthMm": 16,
      "xMm": 20.575000000000003,
      "yMm": 14.399999999999999,
    },
    {
      "align": "center",
      "fontSizePt": 5.8,
      "fontWeight": "bold",
      "id": "lineName_r1c0",
      "text": "Line-1",
      "type": "text",
      "widthMm": 16,
      "xMm": 1.5250000000000004,
      "yMm": 31.599999999999998,
    },
    {
      "align": "center",
      "fontSizePt": 5.4,
      "fontWeight": "normal",
      "id": "aSide_r1c0",
      "text": "Switch-A",
      "type": "text",
      "widthMm": 16,
      "xMm": 1.5250000000000004,
      "yMm": 35.699999999999996,
    },
    {
      "align": "center",
      "fontSizePt": 5.4,
      "fontWeight": "normal",
      "id": "zSide_r1c0",
      "text": "Switch-B",
      "type": "text",
      "widthMm": 16,
      "xMm": 1.5250000000000004,
      "yMm": 39.8,
    },
    {
      "align": "center",
      "fontSizePt": 5.8,
      "fontWeight": "bold",
      "id": "lineName_r1c1",
      "text": "Line-1",
      "type": "text",
      "widthMm": 16,
      "xMm": 20.575000000000003,
      "yMm": 31.599999999999998,
    },
    {
      "align": "center",
      "fontSizePt": 5.4,
      "fontWeight": "normal",
      "id": "aSide_r1c1",
      "text": "Switch-A",
      "type": "text",
      "widthMm": 16,
      "xMm": 20.575000000000003,
      "yMm": 35.699999999999996,
    },
    {
      "align": "center",
      "fontSizePt": 5.4,
      "fontWeight": "normal",
      "id": "zSide_r1c1",
      "text": "Switch-B",
      "type": "text",
      "widthMm": 16,
      "xMm": 20.575000000000003,
      "yMm": 39.8,
    },
  ],
  "page": {
    "heightMm": 101.6,
    "widthMm": 38.1,
  },
}
`;
